--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    <header class="head">
-<h1 class="heading"> All about Pandas</h1>
+    <header class="heading">
+        <h1>All about pandas</h1>
     </header>
     <main class="grid-container">
+        <div class="second-head">
+            <h1>Pandas are adorable</h1>
+        </div>
+
         <div class="image-content">
-<img src="./TlroChI-panda-bear-wallpaper.jpg" alt="" srcset="">
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus blanditiis, corrupti vel vero tempore ab! Mollitia ad nam nisi culpa ratione consectetur est deserunt exercitationem labore dignissimos repellat odio porro assumenda quis ex facilis voluptate fuga, quibusdam at qui similique voluptas quia. Reprehenderit, beatae. Alias minima aliquid quos labore dicta?</p>
+
+            <img src="./standing-panda.jpg" alt="" height="500px" srcset="">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus blanditiis, corrupti vel vero tempore ab!
+                Mollitia ad nam nisi culpa ratione consectetur est deserunt exercitationem labore dignissimos repellat
+                odio porro assumenda quis
+                ex facilis voluptate fuga, quibusdam at qui similique voluptas quia. Reprehenderit, beatae. Alias minima
+                aliquid quos labore dicta?
+
+            </p>
+        </div>
+        <div class="third-head">
+            <h1> friendly pandas</h1>
         </div>
         <div class="sider">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore neque veritatis itaque atque quasi eos tenetur illo, omnis laudantium ea eum repellendus saepe sed nobis porro ex sit natus impedit optio modi. Laborum quia minima veritatis sequi iure quidem dicta.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore neque veritatis itaque atque quasi eos
+                tenetur illo, omnis laudantium ea eum repellendus saepe sed nobis porro ex sit natus impedit optio modi.
+                Laborum quia minima veritatis sequi iure quidem dicta.</p>
         </div>
     </main>
 </body>
+
 </html>
