REFACTOR : updates responsiveness except image

--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
     <header class="heading">
         <h1>All about pandas</h1>
     </header>
-    <main class="grid-container">
-        <div class="second-head">
-            <h1>Pandas are adorable</h1>
+    <div class="grid-container">
+        <div class="header-one"><h1>PANDAS ARE ADORABLE</h1></div>
+        <div class="header-two"><h1 class="expo"> FRIENDLY PANDAS</h1></div>
+        <div class="image">
+           <img src="/standing-panda.jpg" alt="" width="100%" height="100%" srcset="standing panda">
+          
         </div>
-
-        <div class="image-content">
-
-            <img src="./standing-panda.jpg" alt="" height="500px" srcset="">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus blanditiis, corrupti vel vero tempore ab!
-                Mollitia ad nam nisi culpa ratione consectetur est deserunt exercitationem labore dignissimos repellat
-                odio porro assumenda quis
-                ex facilis voluptate fuga, quibusdam at qui similique voluptas quia. Reprehenderit, beatae. Alias minima
-                aliquid quos labore dicta?
-
-            </p>
+        <div class="content">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, nemo quis pariatur necessitatibus
+                odio animi corrupti cumque velit ad vero laudantium dolore praesentium, aut vitae libero non tempora
+                perspiciatis ea ab sapiente? Vero doloribus distinctio ratione aperiam non deserunt tempora.</p>
+                <ul>
+                    <li>hsdf</li>
+                    <li>sdfhsdh</li>
+                    <li>cbxfh</li>
+                    <li>rhdhsdf</li>
+                    <li>fdhsdb</li>
+                    <li>adfha</li>
+                    <li>ahdfhd</li>
+                </ul>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, nemo quis pariatur necessitatibus
+                    
+                    perspiciatis ea ab sapiente? Vero doloribus distinctio ratione aperiam non deserunt tempora.</p>
         </div>
-        <div class="third-head">
-            <h1> friendly pandas</h1>
-        </div>
-        <div class="sider">
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore neque veritatis itaque atque quasi eos
-                tenetur illo, omnis laudantium ea eum repellendus saepe sed nobis porro ex sit natus impedit optio modi.
-                Laborum quia minima veritatis sequi iure quidem dicta.</p>
-        </div>
-    </main>
+        <div class="footer-three"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, incidunt harum dolores provident illum consectetur repellendus perferendis voluptas pariatur, adipisci vel debitis! Veritatis eum molestias ratione magni autem, adipisci quaerat architecto corrupti hic minima sed reiciendis laboriosam, harum accusantium? Totam vel fugit ut laudantium labore quod ad eius accusantium voluptas?</p></div>
+    </div>
 </body>
 
 </html>
